// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with an emoji-only message 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA sc-jNHnZL eJFPUr"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW sc-cqJfLC kwrOsv"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cxVPNz sc-jefFLK hJdtyD dHugMA"
    >
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes TdTG"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes TdTG"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes TdTG"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA sc-jNHnZL eJFPUr"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW sc-cqJfLC kwrOsv"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cxVPNz sc-jefFLK hJdtyD dHugMA"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header whose text mentions the self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY oTodr sc-bXdOnr GcwX"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-cTAITq izjpOI"
    >
      <div
        class="sc-lkgRtK fKnbdb sc-eySzLJ kdZFKi"
      >
        <div
          class="sc-gsNiZj ihrxfp sc-jlRLdN bcFsUr"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-ihILfL hSDOly"
        tabindex="0"
      >
        <span
          class="sc-fvpurI cVmljw"
        >
          <i
            aria-hidden="true"
            class="sc-bLdrIe iYVLlI"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-bLdrIe iYVLlI"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-cxVPNz sc-jefFLK hJdtyD dHugMA"
    >
      Hey
       
      <span
        class="sc-avgGE hhYORm sc-bnOOOA kvcXqG"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with a message-link chip 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA sc-bXdOnr GcwX"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-cTAITq izjpOI"
    >
      <div
        class="sc-lkgRtK fKnbdb sc-eySzLJ kdZFKi"
      >
        <div
          class="sc-gsNiZj ihrxfp sc-jlRLdN bcFsUr"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-ihILfL hSDOly"
        tabindex="0"
      >
        <span
          class="sc-fvpurI cVmljw"
        >
          <i
            aria-hidden="true"
            class="sc-bLdrIe iYVLlI"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-bLdrIe iYVLlI"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-cxVPNz sc-jefFLK hJdtyD dHugMA"
    >
      see this: 
      <a
        class="sc-lheWVM eSupff"
        href="https://shieldbattery.net/chat/1/some-channel?m=9b2e8d0e-5f3a-4a2b-8c1d-6f5e4d3c2b1a"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        <span
          aria-hidden="true"
          class="sc-hiCkpJ dnvpxc sc-hoHvKZ cayZlc"
        >
          chat
        </span>
        <span
          aria-label="Channel name loading…"
          class="sc-haThUj dMnNlp"
        >
                     
        </span>
        <span
          class="sc-hmvloj iwqmxW"
        >
          ›
        </span>
        <span
          class="sc-gsFBvc fTiOjp"
        >
          message
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA sc-bXdOnr GcwX"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-cTAITq izjpOI"
    >
      <div
        class="sc-lkgRtK fKnbdb sc-eySzLJ kdZFKi"
      >
        <div
          class="sc-gsNiZj ihrxfp sc-jlRLdN bcFsUr"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-ihILfL hSDOly"
        tabindex="0"
      >
        <span
          class="sc-fvpurI cVmljw"
        >
          <i
            aria-hidden="true"
            class="sc-bLdrIe iYVLlI"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-bLdrIe iYVLlI"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-cxVPNz sc-jefFLK hJdtyD dHugMA"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gLDjOb hWvtoF"
    >
      * 
    </span>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm sc-hIaeua ikkneS gkALLW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-cxVPNz sc-jnrVmt hJdtyD dDugqo"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-avgGE hhYORm sc-bnOOOA kvcXqG"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      hey
       
      <span
        class="sc-avgGE hhYORm sc-bnOOOA kvcXqG"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-avgGE hhYORm sc-bnOOOA kvcXqG"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      hey
       
      <span
        class="sc-avgGE hhYORm sc-bnOOOA kvcXqG"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      <span
        class="sc-avgGE hhYORm sc-bnOOOA kvcXqG"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-avgGE hhYORm sc-bnOOOA kvcXqG"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY oTodr"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      Hey
       
      <span
        class="sc-avgGE hhYORm sc-bnOOOA kvcXqG"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes TdTG"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes TdTG"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes TdTG"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bvFjeY dvgBCA"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jibzWn iFRSQW"
      tabindex="0"
    >
      <span
        class="sc-emDrzp hNORCZ"
      >
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bLdrIe iYVLlI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gqtqYm ikkneS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bLdrIe iYVLlI"
    >
      : 
    </i>
    <span
      class="sc-cxVPNz hJdtyD"
    >
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
        tabindex="-1"
      >
        <span
          class="sc-cfJLes fEnGJJ"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
